<resources>
    <string name="app_name">app</string>
    <string name="taxi_drive">Taxi Drive</string>
    <string name="email_hint"><font size="15"> Email</font></string>
    <string name="password_hint"><font size="15"> Hasło</font></string>
    <string name="confirm_password_hint"><font size="15"> Powtórz hasło</font></string>
    <string name="first_name_hint"><font size="15"> Imię</font></string>
    <string name="last_name_hint"><font size="15"> Nazwisko</font></string>
    <string name="phone_number_hint"><font size="15"> Numer telefonu</font></string>
    <string name="password_forgot">Zapomniałeś hasła?</string>
    <string name="login">Zaloguj się</string>
    <string name="sing_up">Stwórz konto</string>
    <string name="create_account">Stwórz konto</string>
    <string name="wrong_password">Nieprawidłowe hasło</string>
    <string name="confirm_info">Najbliższa taksówka znajdzie się we wskazanej lokalizacji o godzinie: </string>
    <string name="time_example">12:56</string>
    <string name="cancel">Anuluj</string>
    <string name="history">Historia</string>
    <string name="order">Zamów</string>
    <string name="settings">Ustawienia</string>
    <string name="my_location">Podaj miejsce początkowe</string>
    <string name="destination_point">Podaj punkt docelowy</string>
    <string name="set_time">Podaj czas</string>
    <string name="confirm">Potwierdz</string>
    <string name="driver_info">Dane kierowcy</string>
    <string name="arrival_time">Przyjazd 12:56</string>
    <string name="name_surname">Imię i nazwisko:</string>
    <string name="example_name">Andrzej Walczak</string>
    <string name="example_car_name">Opel Corsa B</string>
    <string name="car">Pojazd</string>
    <string name="plates_number">Numer rejestracyjny</string>
    <string name="example_plates_number">PKE 0700C</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="example_phone_number">070 088 007</string>
    <string name="cancel_fares">Anuluj przejazd</string>
    <string name="fares_history">Historia przejazdów</string>
    <string name="sum">Suma:</string>
    <string name="line">_______________</string>
    <string name="active_fares">Aktywne przejazdy</string>
    <string name="start_point">Start podróży:</string>
    <string name="example_start_point">ul. Nowowiejska 35</string>
    <string name="destination_point_details">Cel podróży:</string>
    <string name="example_destination_point">ul. Piwna 25</string>
    <string name="start_fare">Rozpocznij przejazd</string>
    <string name="end_fare">Zakończ przejazd</string>
    <string name="cost_text">Koszt</string>
    <string name="example_cost">25zł</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="active">Aktywne</string>
    <string name="new_fares">Nowe przejazdy</string>
    <string name="log_out">Wyloguj się</string>
    <string name="cancel_fare">Anuluj przejazd</string>
</resources>
