<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_order"
        android:enabled="true"
        android:icon="@drawable/ic_local_taxi_black_1_24dp"
        android:title="@string/active"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>