<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:context="com.example.tomek.uberallesdriver.LoginActivity"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_local_taxi_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/taxi_drive"
            android:textColor="@color/textPrimaryColor"
            android:textSize="50sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edit_text_phone_number"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@color/textPrimaryColor"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="2dp"
            android:background="@color/textPrimaryColor"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />

        <TextView
            android:id="@+id/forgot_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="8dp"
            android:text="@string/password_forgot"
            android:textColor="@color/textPrimaryColor"
            android:textSize="15sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccent"
            android:elevation="15dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sing_up_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/sing_up"
            android:textColor="@color/textPrimaryColor"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>