<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomek.uberallesdriver.fragments.ConfirmFragment"
    style="@style/Theme.Design.NoActionBar">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm_info"
            android:textColor="@android:color/white"
            android:layout_margin="40dp"
            android:textSize="20sp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_example"
            android:layout_margin="40dp"
            android:textSize="70sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:id="@+id/confirm_time"/>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@color/colorAccent"
            android:elevation="15dp"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:elevation="15dp"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>
